tests/ui/consts/const_in_pattern/issue-65466.stderr
error: constant of non-structural type `O<B>` in a pattern
  --> $DIR/issue-65466.rs:14:9
   |
LL | enum O<T> {
   | --------- `O<B>` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL | const C: &[O<B>] = &[O::None];
   | ---------------- constant defined here
...
LL |         C => (),
   |         ^ constant of non-structural type
   |
help: if `O<B>` manually implemented `PartialEq`, you could add a condition to the match arm checking for equality
   |
LL -         C => (),
LL +         binding if binding == C => (),
   |

error: aborting due to 1 previous error

